complete langgraph example

--- a/langgraph/langgraph.ipynb
+++ b/langgraph/langgraph.ipynb
@@ -10,13 +10,26 @@
     "from typing import Annotated\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.graph.message import add_messages\n",
-    "from langgraph.graph import StateGraph\n",
-    "from langgraph.graph.message import add_messages\n",
+    "from langgraph.prebuilt import ToolNode, tools_condition\n",
     "from langchain_openai import ChatOpenAI\n",
     "from pydantic import BaseModel\n",
     "import gradio as gr\n",
     "import random\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(override=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408175ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "memory = MemorySaver()"
    ]
   },
   {
@@ -26,8 +39,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nouns = [\"Cabbages\", \"Unicorns\", \"Toasters\", \"Penguins\", \"Bananas\", \"Zombies\", \"Rainbows\", \"Eels\", \"Pickles\", \"Muffins\"]\n",
-    "adjectives = [\"outrageous\", \"smelly\", \"pedantic\", \"existential\", \"moody\", \"sparkly\", \"untrustworthy\", \"sarcastic\", \"squishy\", \"haunted\"]"
+    "# from langchain.agents import Tool\n",
+    "from langchain_community.utilities import GoogleSerperAPIWrapper\n",
+    "from langchain.tools import tool\n",
+    "\n",
+    "serper = GoogleSerperAPIWrapper()\n",
+    "\n",
+    "@tool\n",
+    "def tool_search(search_query: str) -> str:\n",
+    "    \"\"\"A search tool using Serper API.\n",
+    "\n",
+    "    Args:\n",
+    "        search_query: The query string to search for.\n",
+    "    \"\"\"\n",
+    "    return serper.run(search_query)\n",
+    "\n",
+    "print(tool_search.run(\"Muscle relaxation techniques for stress relief\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec0a58f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [tool_search]"
    ]
   },
   {
@@ -38,7 +75,6 @@
    "outputs": [],
    "source": [
     "class State(BaseModel):\n",
-    "        \n",
     "    messages: Annotated[list, add_messages]"
    ]
   },
@@ -60,13 +96,15 @@
    "outputs": [],
    "source": [
     "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "llm_with_tools = llm.bind_tools(tools)\n",
     "\n",
     "def chatbot_node(old_state: State) -> State:\n",
-    "    response = llm.invoke(old_state.messages)\n",
+    "    response = llm_with_tools.invoke(old_state.messages)\n",
     "    new_state = State(messages=[response])\n",
     "    return new_state\n",
     "\n",
-    "graph_builder.add_node(\"chatbot\", chatbot_node)"
+    "graph_builder.add_node(\"chatbot\", chatbot_node)\n",
+    "graph_builder.add_node(\"tools\", ToolNode(tools=tools))"
    ]
   },
   {
@@ -76,6 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "graph_builder.add_conditional_edges( \"chatbot\", tools_condition, \"tools\")\n",
+    "\n",
     "graph_builder.add_edge(START, \"chatbot\")\n",
     "graph_builder.add_edge(\"chatbot\", END)"
    ]
@@ -87,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = graph_builder.compile()"
+    "graph = graph_builder.compile(checkpointer=memory)"
    ]
   },
   {
@@ -97,14 +137,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config = {\"configurable\": {\"thread_id\": \"1\"}}\n",
+    "\n",
     "def chat(user_input: str, history):\n",
     "    initial_state = State(messages=[{\"role\": \"user\", \"content\": user_input}])\n",
-    "    result = graph.invoke(initial_state)\n",
+    "    result = graph.invoke(initial_state, config=config)\n",
     "    print(result)\n",
     "    return result['messages'][-1].content\n",
     "\n",
-    "gr.ChatInterface(chat, type=\"messages\").launch()"
+    "gr.ChatInterface(chat).launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de49012b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +164,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.11"
   }
  },
