update readme and comments in notebooks

--- a/autogen/autogen_example.ipynb
+++ b/autogen/autogen_example.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "941e717b",
+   "metadata": {},
+   "source": [
+    "# AG2 (AutoGen) Example\n",
+    "\n",
+    "This is an example using the AG2 version of AutoGen (which is distinct from the Microsoft version)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9aab82a2",
@@ -9,6 +19,14 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f993c96",
+   "metadata": {},
+   "source": [
+    "Create the model client:"
    ]
   },
   {
@@ -23,6 +41,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc001249",
+   "metadata": {},
+   "source": [
+    "AutoGen uses the TextMessage class for messages to the LLM:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bb93e2bb",
@@ -32,6 +58,14 @@
     "from autogen_agentchat.messages import TextMessage\n",
     "message = TextMessage(content=\"I'd like to go to London\", source=\"user\")\n",
     "message"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f12e52f3",
+   "metadata": {},
+   "source": [
+    "Set up a small tool using the Serper web search from LangChain:"
    ]
   },
   {
@@ -56,6 +90,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d67bd6e5",
+   "metadata": {},
+   "source": [
+    "Set up an agent with access to the tool:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1d815fe9",
@@ -72,6 +114,14 @@
     "    tools=[get_city_price],\n",
     "    reflect_on_tool_use=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd711fd4",
+   "metadata": {},
+   "source": [
+    "Run the agent:"
    ]
   },
   {
