--- a/langgraph/langgraph.ipynb
+++ b/langgraph/langgraph.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "708d33e7",
+   "metadata": {},
+   "source": [
+    "# LangGraph is an LLM scheduling tool associate with LangChain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a37e4847",
@@ -21,6 +29,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24aaf84f",
+   "metadata": {},
+   "source": [
+    "Using MemorySaver we can get the Agents to have memory between prompts:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "408175ea",
@@ -30,6 +46,14 @@
     "from langgraph.checkpoint.memory import MemorySaver\n",
     "\n",
     "memory = MemorySaver()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0dfd741",
+   "metadata": {},
+   "source": [
+    "Create a small serper tool:"
    ]
   },
   {
@@ -58,6 +82,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "740082d5",
+   "metadata": {},
+   "source": [
+    "All tools must be placed into a tools list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6ec0a58f",
@@ -65,6 +97,14 @@
    "outputs": [],
    "source": [
     "tools = [tool_search]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d24b4d6",
+   "metadata": {},
+   "source": [
+    "LangGraph needs us to set up a state class:"
    ]
   },
   {
@@ -79,6 +119,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d8a1db9",
+   "metadata": {},
+   "source": [
+    "Then we can initialise the graphbuilder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5e08b8ef",
@@ -86,6 +134,14 @@
    "outputs": [],
    "source": [
     "graph_builder = StateGraph(State)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea26ca30",
+   "metadata": {},
+   "source": [
+    "Define the LLM and add nodes:"
    ]
   },
   {
@@ -108,6 +164,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9b4b7ee",
+   "metadata": {},
+   "source": [
+    "Build the edges of the graph:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7d2db781",
@@ -121,6 +185,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b9f5950",
+   "metadata": {},
+   "source": [
+    "Compile the graph:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b6facbb9",
@@ -128,6 +200,14 @@
    "outputs": [],
    "source": [
     "graph = graph_builder.compile(checkpointer=memory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6616e22b",
+   "metadata": {},
+   "source": [
+    "Then run the graph, config is required for memory"
    ]
   },
   {
