final complete crewai

--- a/openai_agents_sdk/openai_agents_sdk.ipynb
+++ b/openai_agents_sdk/openai_agents_sdk.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "math_agent_2 = Agent(\n",
     "    name=\"math_agent\",\n",
-    "    instructions=\"you are a math agent that can use a calculator agent to add numbers together\",\n",
+    "    instructions=\"you are a math agent that can use a calculator tool directly to add numbers together\",\n",
     "    tools=[add_numbers],\n",
     "    model=\"gpt-4o-mini\"\n",
     "    )\n",
